tests/fixtures/errors/borrow_return_no_lock.z
# A `.borrow` return must borrow from a `.lock` parameter -- a bare `:this`
# receiver does not lock the source, so the returned view has no locked parent.
Box: class { item: String } as {
    peek: function {:this} out String.borrow is { return this.item }
}
main: function is {
    b: (Box item: "hi".string)
    print "\{(b.peek).length}"
}
